HISTORY

[Version x.y.z (x86 w2k driver size in Kbytes)   release date]

  Version 2.1.1 (30.0)   2009-02-
  ------------------------------------------------------------------------------
    - processor architecture check was added to installer
    - few small bugs were fixed


  Version 2.1.0 (30.0)   2009-02-09
  ------------------------------------------------------------------------------
    - debug logging feature was added
    - website was completely redesigned
    - UltraDefrag Handbook was added
    - many important x64 bugs were fixed
    - single file/directory defragmentation ability was added
    - console and native programs great speedup performed
    - gui program was translated into the following languages:

      Czech, Korean, Latvian, Polish, Portuguese (Brazilian), Spanish (AR)

    - gui design was improved
    - two different driver versions (for NT4 and later systems) were replaced 
      by one universal os version independent driver
    - installer was highly optimized
    - winx_fopen: a, a+ modes were added


  Version 2.0.0 (24.0)   2008-11-13
  ------------------------------------------------------------------------------
    - scripting support for boot time interface was added
    - program options were moved to environment variables
    - UltraDefrag Micro Edition package was added
    - a lot of portable application bugs were fixed

    - gui program was translated into the following languages:

      Catala, Chinese (Simplified), Chinese (Traditional), Dutch, 
      French (FR), German, Greek, Italian, Portuguese, Slovak, Slovenian

    - boot-on, boot-off, ud-config scripts were added
    - few useful shortcuts were added
    - udefrag.dll great optimization was performed
    - many functions were added to zenwinx.dll
    - installer compression ratio was increased
    - gui design was improved

                                    ***

  Version 1.4.0 (22.5)   2008-10-02